# ppx_deriving_yojson

./: .gitignore  .merlin  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  _tags  descr  dune-project  dune-workspace.dev  jbuild-workspace.dev  myocamlbuild.ml  old.txt  opam  ppx_deriving_yojson.opam
pkg/: META  META.in  build.ml
src/: dune  jbuild  ppx_deriving_yojson.cppo.ml  ppx_deriving_yojson.ml  ppx_deriving_yojson.mli  ppx_deriving_yojson_runtime.ml  ppx_deriving_yojson_runtime.mli
src_test/: dune  jbuild  test_ppx_yojson.cppo.ml  test_ppx_yojson.ml
