opam-version: "2.0"
version: "3.7.0"
maintainer: "whitequark <whitequark@whitequark.org>"
authors: [ "whitequark <whitequark@whitequark.org>" ]
license: "MIT"
homepage: "https://github.com/ocaml-ppx/ppx_deriving_yojson"
bug-reports: "https://github.com/ocaml-ppx/ppx_deriving_yojson/issues"
dev-repo: "git+https://github.com/ocaml-ppx/ppx_deriving_yojson.git"
tags: [ "syntax" "json" ]
build: [
  ["dune" "subst"] {dev}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.05.0"}
  "dune" {>= "1.0"}
  "yojson" {>= "1.6.0"}
  "ppx_deriving" {>= "5.1"}
  "ppxlib" {>= "0.35.0"}
  "ounit2" {with-test}
]
synopsis:
  "JSON codec generator for OCaml"
description: """
ppx_deriving_yojson is a ppx_deriving plugin that provides
a JSON codec generator.
"""
