(library
 (name ppx_deriving_yojson_runtime)
 (public_name ppx_deriving_yojson.runtime)
 (synopsis "Runtime components of [@@deriving yojson]")
 (modules ppx_deriving_yojson_runtime)
 (libraries ppx_deriving.runtime result))

(library
 (name ppx_deriving_yojson)
 (public_name ppx_deriving_yojson)
 (synopsis "[@@deriving yojson]")
 (libraries ppx_deriving.api)
 (preprocess (pps ppxlib.metaquot))
 (ppx_runtime_libraries ppx_deriving_yojson_runtime yojson)
 (modules ppx_deriving_yojson)
 (kind ppx_deriver)
 (flags (:standard -w -9)))
